--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 <h2>Install</h2>
 <p>Ignore</p>
 <h2>License</h2>
-<p>Free, as in beer</p>
+<p>Free, as in beer. I mean, who cares <em>really?</em></p>
 <h2>Contact</h2>
-<p> (glenn.goodrich@gmail.com)<br/>      </p>
+<p> (glenn.goodrich@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
